manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: time-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: time-app.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: time-app-service
            port:
              number: 80
